kubernetes/base/media-server/bases/qbittorrent/resources/deployment.old.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    project: media-server
    component: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      project: media-server
      component: qbittorrent
  template:
    metadata:
      labels:
        project: media-server
        component: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: binhex/arch-qbittorrentvpn:4.5.4-1-03
          ports:
            - name: qb-web-ui
              containerPort: 8080
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          volumeMounts:
            - mountPath: /config/openvpn
              name: config
            - mountPath: /data
              name: media
      volumes:
        - name: config
          configMap:
            name: pia-openvpn-config
            items:
              - key: us_east.ovpn
                path: us_east.ovpn
        - name: media
          persistentVolumeClaim:
            claimName: media-files
