kubernetes/base/media-server/bases/qbittorrent/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    project: media-server
    component: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      project: media-server
      component: qbittorrent
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        project: media-server
        component: qbittorrent
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: project
                    operator: In
                    values:
                      - media-server
                  - key: component
                    operator: In
                    values:
                      - emby
              topologyKey: kubernetes.io/hostname
      containers:
        - name: qbittorrent
          image: linuxserver/qbittorrent:4.5.4
          ports:
            - name: qb-web-ui
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: qbittorrent-config-dir-do-block
              mountPath: /config/qBittorrent
            - name: media-do-block
              mountPath: /media
          livenessProbe:
            httpGet:
              path: /
              port: qb-web-ui
          readinessProbe:
            httpGet:
              path: /
              port: qb-web-ui
        - name: vpn
          image: qmcgaw/gluetun:v3.38.0
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - name: control
              containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: vpn-port
              mountPath: /mnt
          resources:
            requests:
              memory: 512Mi
              cpu: 500m
        - name: qbittorrent-port-updater
          image: noahhuppert/qbittorrent-port-updater:v1.0.0
          volumeMounts:
            - name: vpn-port
              mountPath: /mnt
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
      volumes:
        - name: qbittorrent-config
          configMap:
            name: qbittorrent-config
        - name: qbittorrent-config-dir-do-block
          persistentVolumeClaim:
            claimName: qbittorrent-config-do-block
        - name: media-do-block
          persistentVolumeClaim:
            claimName: media-files-do-block
        - name: vpn-port
          emptyDir: {}
