kubernetes/base/media-server/bases/qbittorrent/resources/gluten-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gluten
  labels:
    project: media-server
    component: gluten
spec:
  selector:
    project: media-server
    component: qbittorrent
  ports:
    - name: control
      protocol: TCP
      port: 8000
      targetPort: control
