kubernetes/base/media-server/bases/qbittorrent/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  labels:
    project: media-server
    component: qbittorrent
spec:
  selector:
    project: media-server
    component: qbittorrent
  ports:
    - name: qb-web-ui
      protocol: TCP
      port: 80
      targetPort: qb-web-ui
