kubernetes/base/media-server/bases/qbittorrent/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  labels:
    project: media-server
    component: qbittorrent
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-production-http01
spec:
  ingressClassName: nginx
  rules:
  - host: qbittorrent.media.k8s.funkyboy.zone
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbittorrent
            port:
              number: 80
  tls:
    - hosts:
        - qbittorrent.media.k8s.funkyboy.zone
      secretName: qb-web-ui-ingress-cert
