kubernetes/base/media-server/bases/qbittorrent/resources/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: qbittorrent-access
  labels:
    project: media-server
    component: qbittorrent
spec:
  podSelector:
    matchLabels:
      project: media-server
      component: qbittorrent
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Requests from -arr services which use qBittorrent
    - from:
        - podSelector:
            matchLabels:
              project: media-server
              component: radarr
        - podSelector:
            matchLabels:
              project: media-server
              component: sonarr
      ports:
        - protocol: TCP
          port: 8080

    # Requests from Wireguard VPN
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: wireguard
      ports:
        - protocol: TCP
          port: 8080
  
  egress:
    # Responses to -arr services which use qBittorrent
    - to:
        - podSelector:
            matchLabels:
              project: media-server
              component: radarr
        - podSelector:
            matchLabels:
              project: media-server
              component: sonarr
      ports:
        - protocol: TCP
          port: 8080

    # Responses to Wireguard VPN
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: wireguard
      ports:
        - protocol: TCP
          port: 8080

    # VPN
    # /32 CIDR covers one IP address
    - to:
        - ipBlock:
            cidr: 140.228.24.119/32
        - ipBlock:
            cidr: 140.228.24.109/32
        - ipBlock:
            cidr: 140.228.24.116/32
        - ipBlock:
            cidr: 140.228.24.128/32
